[package]
name = "squirrel-context"
version = "0.1.0"
edition = "2021"
description = "Context management for the Squirrel AI system"
authors = ["DataScienceBioLab"]
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sled = { workspace = true }
rand = { workspace = true }
tracing = "0.1"
tracing-subscriber = { workspace = true }
glob = "0.3"
log = "0.4"
regex = "1.10"
async-recursion = "1.0"
parking_lot = "0.12"

# Shared squirrel dependencies
squirrel-core = { path = "../core" }
squirrel-interfaces = { path = "../interfaces" }

[features]
default = []
with-plugins = []

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.7"
mockall = "0.11"

[lib]
name = "squirrel_context"
path = "src/lib.rs" 