[package]
name = "squirrel-context-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Context adapter components for Squirrel"

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# Shared squirrel dependencies
squirrel-core = { path = "../core" }
squirrel-context = { path = "../context" }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }

[lib]
name = "squirrel_context_adapter"
path = "src/lib.rs" 