[package]
name = "squirrel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true, optional = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror.workspace = true
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sled = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
sysinfo = "0.30"

# Monitoring and logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# MCP dependencies
bytes = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }

# Compression dependencies
zstd = { version = "0.13", features = ["zstdmt"] }
flate2 = { version = "1.0", features = ["zlib"] }
lz4 = "1.24"
log = "0.4.26"

[dev-dependencies]
tokio-test = "0.4.2"
tempfile = "3.8.0"
mockall = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }
snapbox = { workspace = true }

[features]
default = ["async"]
async = ["dep:tokio"]

[lib]
name = "squirrel_core"
path = "src/lib.rs"

[build-dependencies]
built = "0.7"
