[package]
name = "squirrel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core functionality for Squirrel"
license.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"], optional = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

# Interfaces dependencies - to avoid circular dependencies
squirrel-interfaces = { path = "../interfaces", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }
snapbox = { workspace = true }
proptest = { workspace = true }

[features]
default = ["async", "core"]
di-tests = []
async = ["dep:tokio"]
core = []
interfaces = ["dep:squirrel-interfaces"]

[lints]
workspace = true

[lib]
name = "squirrel_core"
path = "src/lib.rs"

[build-dependencies]
built = "0.7"