[package]
name = "squirrel-mcp-core"
version = "2.2.0"
edition = "2021"
description = "Universal swarm MCP agent system with Songbird integration"
authors = ["Squirrel MCP Team"]
license = "MIT"
repository = "https://github.com/squirrel-mcp/core"

# Exclude from workspace - this is a standalone Phase 2.2 implementation
[workspace]

[lib]
name = "squirrel_mcp_core"
path = "core/src/lib.rs"

[[bin]]
name = "squirrel-mcp"
path = "core/src/bin/squirrel-mcp.rs"

[[bin]]
name = "squirrel-mcp-demo"
path = "core/src/bin/squirrel-mcp-demo.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
parking_lot = "0.12"
dashmap = "6.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8" 