[package]
name = "dashboard-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the Squirrel monitoring dashboard"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
sysinfo = "0.30"
lazy_static = "1.4"
futures = "0.3"
log = "0.4"

# Monitor system integration
squirrel-monitoring = { path = "../monitoring" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11" 