[package]
name = "dashboard-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the Squirrel monitoring dashboard"

[dependencies]
# Async runtime
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Time handling
chrono = { version = "0.4.35", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling
thiserror = "1.0.57"
anyhow = "1.0"

# Utilities
uuid = { version = "1.7.0", features = ["v4", "serde"] }
sysinfo = "0.30.5"
lazy_static = "1.4.0"
futures = "0.3.30"
log = "0.4"
tracing = "0.1.40"

# Monitor system integration
squirrel-monitoring = { path = "../monitoring" }

[dev-dependencies]
tokio-test = "0.4.3"
env_logger = "0.10.2"
mockall = "0.11" 