[package]
name = "ecosystem-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
description = "Shared API types and traits for ecoPrimals ecosystem integration"

[lints]
workspace = true

[dependencies]
# Core async and serialization
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# HTTP client for service mesh communication (OPTIONAL - for HTTP APIs)
# Production uses Unix sockets via capability discovery!
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
url.workspace = true

# Logging and tracing
tracing.workspace = true
log.workspace = true

# Futures for stream types
futures = "0.3"

# CRITICAL FIX: Add missing config dependency
squirrel-mcp-config = { path = "../config" }
universal-constants = { path = "../universal-constants" }

[features]
# Production default: Unix sockets only (Pure Rust!)
default = ["ecosystem-integration"]
ecosystem-integration = []
# HTTP APIs (brings reqwest → ring, for dev/testing)
http-api = ["dep:reqwest"]
http-client = ["dep:reqwest"]  # Alias for backward compatibility
testing = [] 