[package]
name = "ecosystem-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
description = "Shared API types and traits for ecoPrimals ecosystem integration"

[lints]
workspace = true

[dependencies]
# Core async and serialization
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# HTTP client for service mesh communication (OPTIONAL - for HTTP APIs)
# Production uses Unix sockets via capability discovery!
#
# CRYPTO MIGRATION (ecoPrimals: Pure Rust): reqwest 0.12 uses rustls 0.23 (pluggable crypto).
# Proof-of-concept: upgraded from 0.11. Still uses ring by default; rustls-tls-manual-roots-no-provider
# + aws-lc-rs or rustls-rustcrypto for pure-Rust path. See docs/CRYPTO_MIGRATION.md.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
url.workspace = true

# Logging and tracing
tracing.workspace = true

# Futures for stream types
futures = "0.3"

# CRITICAL FIX: Add missing config dependency
squirrel-mcp-config = { path = "../config", version = "0.1.0" }
universal-constants = { path = "../universal-constants", version = "0.1.0" }

[features]
# Production default: Unix sockets only (Pure Rust!)
default = ["ecosystem-integration"]
ecosystem-integration = []
# HTTP APIs (brings reqwest → ring, for dev/testing)
http-api = ["dep:reqwest"]
http-client = ["dep:reqwest"]  # Alias for backward compatibility
testing = []

[dev-dependencies]
temp-env = "0.3" 