[package]
name = "ecosystem-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-or-later"
description = "Shared API types and traits for ecoPrimals ecosystem integration"
repository = "https://github.com/ecoPrimals/squirrel"
readme = "README.md"
keywords = ["ecoprimals", "ai", "mcp", "json-rpc"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
# Core async and serialization
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# HTTP client for service mesh communication (OPTIONAL - for HTTP APIs)
# Production uses Unix sockets via capability discovery!
url.workspace = true

# Logging and tracing
tracing.workspace = true

# Futures for stream types
futures = "0.3"

universal-constants = { path = "../universal-constants", version = "0.1.0" }

[features]
# Production default: Unix sockets only (Pure Rust!)
default = ["ecosystem-integration"]
ecosystem-integration = []
## http-api/http-client features removed (stadial gate: reqwest lockfile ghost eliminated)
testing = []

[dev-dependencies]
temp-env = "0.3" 