[package]
name = "galaxy"
version = "0.1.0"
edition = "2021"
description = "MCP adapter for Galaxy bioinformatics platform"
authors = ["DataScienceBioLab"]
license = "MIT"
repository = "https://github.com/DataScienceBioLab/galaxy"
readme = "README.md"

[features]
default = ["mcp-integration"]
mcp-integration = ["squirrel-mcp", "squirrel-context"]
test-utils = []

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

# Error handling
thiserror = "1.0"

# Async support
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
time = { version = "0.3", features = ["formatting", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Security
zeroize = { version = "1.5", features = ["zeroize_derive"] }
base64 = "0.13"
rand = "0.8"
aes-gcm = "0.10"

# MCP integration (optional)
squirrel-mcp = { path = "../mcp", optional = true }
squirrel-context = { path = "../context", optional = true }

[dev-dependencies]
tempfile = "3.3"
mockito = "0.31"
pretty_assertions = "1.3"
test-log = { version = "0.2", features = ["trace"] }
tokio-test = "0.4"

[package.metadata]
docs = "https://docs.rs/galaxy"
keywords = ["bioinformatics", "galaxy", "mcp", "adapter", "ai"]
categories = ["science", "api-bindings"]
