[package]
name = "squirrel-galaxy"
version = "0.1.0"
edition = "2021"
description = "MCP adapter for Galaxy bioinformatics platform"
authors = ["DataScienceBioLab"]
license = "MIT"
repository = "https://github.com/DataScienceBioLab/galaxy"
readme = "README.md"

[features]
default = ["mcp-integration"]
mcp-integration = ["squirrel-mcp", "squirrel-context"]
test-utils = []

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.5"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async support
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json", "multipart"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time handling
time = { version = "0.3", features = ["formatting", "serde", "parsing", "serde-well-known"] }
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Security
zeroize = { version = "1.5", features = ["zeroize_derive"] }
base64 = "0.13"
rand = { workspace = true }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
secrecy = "0.8"
argon2 = "0.5"
sha2 = "0.10"

# MCP integration (optional)
squirrel-mcp = { path = "../mcp", optional = true }
squirrel-context = { path = "../context", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
mockito = "0.31"
pretty_assertions = "1.3"
test-log = { version = "0.2", features = ["trace"] }
tokio-test = { workspace = true }
rand_chacha = "0.3"

[package.metadata]
docs = "https://docs.rs/galaxy"
keywords = ["bioinformatics", "galaxy", "mcp", "adapter", "ai"]
categories = ["science", "api-bindings"]
