[package]
name = "squirrel-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
description = "Integration adapter for Squirrel"
repository = "https://github.com/ecoPrimals/squirrel"
readme = "README.md"
keywords = ["ecoprimals", "ai", "mcp", "json-rpc"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
thiserror.workspace = true
anyhow.workspace = true
# Squirrel crates
squirrel-core = { path = "../core/core", version = "0.1.0" }
squirrel-mcp = { path = "../core/mcp", version = "0.1.0" }
squirrel-ai-tools.workspace = true
# Logging
tracing.workspace = true
# UUID
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true 