[package]
name = "squirrel-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-or-later"
description = "Integration adapter for Squirrel"
repository = "https://github.com/ecoPrimals/squirrel"
readme = "README.md"
keywords = ["ecoprimals", "ai", "mcp", "json-rpc"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
# Squirrel crates
squirrel-ai-tools.workspace = true
universal-constants.workspace = true
# Logging
tracing.workspace = true
# UUID
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true 