[workspace]
resolver = "2"
members = [
    "core/interfaces"
]

[workspace.package]
authors = ["DataScienceBioLab"]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
# Core dependencies
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
uuid.workspace = true
chrono.workspace = true

# Testing dependencies
tokio-test.workspace = true
mockall.workspace = true

[workspace.lints.rust]
missing_docs = "warn"
rustdoc_missing_doc_code_examples = "warn"
unused_imports = "warn"
unused_variables = "warn" 