[package]
name = "squirrel-interfaces"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Shared interfaces for Squirrel components to avoid circular dependencies"

[dependencies]
# Async runtime and utilities
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# Squirrel dependencies
squirrel-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4" 