[package]
name = "squirrel-interfaces"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared interfaces for Squirrel components to avoid circular dependencies"

[dependencies]
# Async runtime and utilities
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# Time types for tracing
chrono = { workspace = true }

# Remove dependency on core to break circular dependency
# squirrel-core = { path = "../core" }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true 