[package]
name = "squirrel"
version = "0.1.0"
edition = "2021"
authors = ["DataScienceBioLab"]
license = "MIT OR Apache-2.0"
description = "Squirrel Universal AI Primal - Main coordination primal"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
base64 = "0.21"
rand = "0.8"
futures = "0.3"
lazy_static = "1.4"
sysinfo = "0.30"

# Text processing and validation (CRITICAL FIX: Missing regex dependency)
regex = "1.10"

# JSON-RPC server for Unix socket IPC (Phase 1)
jsonrpsee = { version = "0.24", features = ["server", "client"] }
hostname = "0.4"

# tarpc for high-performance RPC (Phase 2)
tarpc = { version = "0.34", features = ["full"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
bincode = "1.3"

# Ecosystem integrations - Service Mesh via Songbird
ecosystem-api = { path = "../ecosystem-api" }
# TODO: Uncomment when songbird dependencies are available
# songbird-registry = { path = "../../../songbird/crates/songbird-registry" }
# songbird-discovery = { path = "../../../songbird/crates/songbird-discovery" }
# songbird-core = { path = "../../../songbird/crates/songbird-core" }
# songbird-errors = { path = "../../../songbird/crates/songbird-errors" }

# Configuration management
squirrel-mcp-config = { path = "../config" }

# Authentication system (CRITICAL FIX: Missing auth dependency)
squirrel-mcp-auth = { path = "../core/auth" }

# Optional local auth crates for development

# Universal patterns
universal-patterns = { path = "../universal-patterns" }
universal-constants = { path = "../universal-constants" }

# SDK dependencies
squirrel-sdk = { path = "../sdk" }
squirrel-integration = { path = "../integration" }

# MCP and AI dependencies
# Using our own MCP implementation instead of external mcp crate
squirrel-mcp = { path = "../core/mcp" }
openai = "1.1"

# Observability
prometheus = { version = "0.13", optional = true }
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }

# Benchmarking (optional)
criterion = { version = "0.5", optional = true }
pprof = { version = "0.13", optional = true }
iai = { version = "0.1", optional = true }

# Additional ecosystem dependencies
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }

[features]
default = ["monitoring", "ecosystem"]
monitoring = ["prometheus", "metrics", "metrics-exporter-prometheus"]
ecosystem = ["tonic", "prost"]
benchmarking = ["criterion", "pprof", "iai"]
enhanced_error_handling = []
optimizations = []

[dev-dependencies]
tokio-test = "0.4"
test-context = "0.1"
mockall = "0.11"
tempfile = "3.8"
pretty_assertions = "1.4"

[[bin]]
name = "squirrel"
path = "src/main.rs"

[[bench]]
name = "ecosystem_benchmarks"
harness = false
required-features = ["benchmarking"]

[lib]
name = "squirrel"
path = "src/lib.rs" 