[package]
name = "squirrel"
version = "0.1.0"
edition = "2024"
authors = ["ecoPrimals Contributors"]
license = "AGPL-3.0-only"
description = "Squirrel Universal AI Primal - Main coordination primal"

[dependencies]
# CLI framework for UniBin architecture
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help"] }

tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
# HTTP framework REMOVED - Squirrel uses Unix sockets + JSON-RPC + tarpc
# All external HTTP is proxied via ecosystem capability routing (own IPC client)
base64 = "0.21"
rand = "0.8"
futures = "0.3"
# lazy_static removed - evolved to std::sync::LazyLock (stable Rust 1.80+)

# Text processing and validation (CRITICAL FIX: Missing regex dependency)
regex = "1.10"

# JSON-RPC: Using manual implementation (BearDog pattern) - ZERO C dependencies!
# jsonrpsee removed - it pulls ring via rustls
hostname = "0.4"
nix = { workspace = true }

# tarpc for high-performance RPC (Phase 2) - Fixed with correct versions from Songbird/BearDog
tarpc = { version = "0.37", features = ["full"], optional = true }
tokio-serde = { version = "0.8.0", features = ["bincode"], optional = true }
bincode = { version = "1.3", optional = true }

# Ecosystem integrations - Service Mesh via Capability Discovery
ecosystem-api = { path = "../ecosystem-api", version = "0.1.0" }
# NOTE: Service mesh dependencies discovered at runtime via capability registry.
# No compile-time primal dependencies needed (TRUE PRIMAL architecture).
# Squirrel knows only itself; other primals are discovered dynamically via Unix sockets.

# Configuration management
squirrel-mcp-config = { path = "../config", version = "0.1.0" }

# Authentication system (CRITICAL FIX: Missing auth dependency)
squirrel-mcp-auth = { path = "../core/auth", version = "0.1.0" }

# Optional local auth crates for development

# Universal patterns
universal-patterns = { path = "../universal-patterns", version = "0.1.0" }
universal-constants = { path = "../universal-constants", version = "0.1.0" }
zeroize.workspace = true

# SDK dependencies
squirrel-sdk = { path = "../sdk", version = "1.0.0" }
squirrel-integration = { path = "../integration", version = "0.1.0" }

# Context management
squirrel-context = { path = "../core/context", version = "0.1.0" }

# MCP and AI dependencies
# Using our own MCP implementation instead of external mcp crate
squirrel-mcp = { path = "../core/mcp", version = "0.1.0" }
# OpenAI SDK - OPTIONAL in v1.1.0+ (dev-direct-http feature only!)
# openai REMOVED - Use capability_ai (delegates to Songbird via Unix sockets) instead!

# Observability
# SECURITY FIX: Updated from 0.13 to fix RUSTSEC-2024-0437 (protobuf uncontrolled recursion)
# Updated to 0.14 to fix protobuf vulnerability (RUSTSEC-2024-0437)
prometheus = { version = "0.14", optional = true }
# Metrics export — prometheus optional, monitoring via capability.call preferred
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }

# Benchmarking (optional)
criterion = { version = "0.5", optional = true, features = ["async_tokio"] }
pprof = { version = "0.13", optional = true }
iai = { version = "0.1", optional = true }

# GPU detection (optional — production delegates to ToadStool)
nvml-wrapper = { version = "0.10", optional = true }

# gRPC REMOVED - NOT ecoPrimals standard!
# ecoPrimals uses JSON-RPC + tarpc (full Rust ecosystem)
# tonic REMOVED - gRPC is NOT our protocol
# prost REMOVED - protobuf NOT needed (use serde_json!)

[features]
# Production default: Core RPC + Ecosystem + Capability AI (100% Pure Rust!)
# NO monitoring (optional - pulls hyper via prometheus)
# NO dev-direct-http (DELETED - use Unix socket delegation!)
default = ["capability-ai", "ecosystem", "tarpc-rpc"]

# Core features (TRUE PRIMAL architecture)
capability-ai = []                     # Capability-based AI (Pure Rust!)
ecosystem = []                         # Ecosystem integration (core!)
tarpc-rpc = ["tarpc", "tokio-serde", "bincode"]  # High-performance binary RPC (core!)

# Optional features
system-metrics = []  # Uses universal_constants::sys_info (pure Rust, /proc on Linux)
monitoring = ["prometheus", "metrics", "metrics-exporter-prometheus"]  # Metrics (optional)
benchmarking = ["criterion", "pprof", "iai"]     # Benchmarking tools
enhanced_error_handling = []                     # Enhanced error handling
optimizations = []                               # Performance optimizations
deprecated-adapters = []                          # Enable deprecated AI adapters (Anthropic, OpenAI) for backward compatibility
nvml = ["dep:nvml-wrapper"]                        # NVIDIA NVML GPU detection
gpu-detection = []                                # GPU detection via NVML/ROCm/nvidia-smi (ToadStool compute primal)

[dev-dependencies]
tokio-test = "0.4"
test-context = "0.1"
mockall = "0.11"
tempfile = "3.8"
temp-env = "0.3"  # Env var isolation for tests (avoids cross-test interference)
pretty_assertions = "1.4"
serial_test = "3.0"  # For serializing tests that modify global state (env vars)
proptest.workspace = true  # Property-based testing (groundSpring/wetSpring pattern)

[[bin]]
name = "squirrel"
path = "src/main.rs"

[[bench]]
name = "ecosystem_benchmarks"
harness = false
required-features = ["benchmarking"]

[lib]
name = "squirrel"
path = "src/lib.rs" 

[lints]
workspace = true
