[package]
name = "squirrel"
version = "0.1.0"
edition = "2024"
authors = ["ecoPrimals Contributors"]
license = "AGPL-3.0-or-later"
description = "Squirrel Universal AI Primal - Main coordination primal"
repository = "https://github.com/ecoPrimals/squirrel"
readme = "README.md"
keywords = ["ecoprimals", "ai", "mcp", "json-rpc"]
categories = ["development-tools"]

[dependencies]
# CLI framework for UniBin architecture
clap = { workspace = true, features = ["cargo", "wrap_help"] }

tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true
dirs.workspace = true
uuid = { workspace = true, features = ["v4"] }
url.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
thiserror.workspace = true
dashmap.workspace = true

# HTTP framework REMOVED - Squirrel uses Unix sockets + JSON-RPC + tarpc
# All external HTTP is proxied via ecosystem capability routing (own IPC client)
base64.workspace = true
rand.workspace = true
futures.workspace = true
# lazy_static removed - evolved to std::sync::LazyLock (stable Rust 1.80+)

# Text processing and validation (CRITICAL FIX: Missing regex dependency)
regex.workspace = true

# JSON-RPC: Using manual implementation (BearDog pattern) - ZERO C dependencies!
# jsonrpsee removed - it pulls ring via rustls
# hostname/nix: consolidated into universal_constants::sys_info (pure Rust on Linux)

# tarpc for high-performance RPC (Phase 2) - Fixed with correct versions from Songbird/BearDog
tarpc = { workspace = true, optional = true }
tokio-serde = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }

# Ecosystem integrations - Service Mesh via Capability Discovery
ecosystem-api.workspace = true
# NOTE: Service mesh dependencies discovered at runtime via capability registry.
# No compile-time primal dependencies needed (TRUE PRIMAL architecture).
# Squirrel knows only itself; other primals are discovered dynamically via Unix sockets.

# Configuration management
squirrel-mcp-config.workspace = true

# Authentication system (CRITICAL FIX: Missing auth dependency)
squirrel-mcp-auth.workspace = true

# Optional local auth crates for development

# Universal patterns
universal-patterns.workspace = true
universal-constants.workspace = true
zeroize.workspace = true

# Context management
squirrel-context.workspace = true

# MCP and AI dependencies
# Using our own MCP implementation instead of external mcp crate
squirrel-mcp.workspace = true
# OpenAI SDK - OPTIONAL in v1.1.0+ (dev-direct-http feature only!)
# openai REMOVED - Use capability_ai (delegates to Songbird via Unix sockets) instead!

# Observability
# SECURITY FIX: Updated from 0.13 to fix RUSTSEC-2024-0437 (protobuf uncontrolled recursion)
# Updated to 0.14 to fix protobuf vulnerability (RUSTSEC-2024-0437)
prometheus = { workspace = true, optional = true }
# Metrics export — prometheus optional, monitoring via capability.call preferred
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# Benchmarking (optional)
criterion = { workspace = true, optional = true }

# GPU detection (optional — production delegates to ToadStool)
nvml-wrapper = { workspace = true, optional = true }

# gRPC REMOVED - NOT ecoPrimals standard!
# ecoPrimals uses JSON-RPC + tarpc (full Rust ecosystem)
# tonic REMOVED - gRPC is NOT our protocol
# prost REMOVED - protobuf NOT needed (use serde_json!)

[features]
# Production default: Core RPC + Ecosystem + Capability AI (100% Pure Rust!)
# NO monitoring (optional - pulls hyper via prometheus)
# NO dev-direct-http (DELETED - use Unix socket delegation!)
default = ["capability-ai", "ecosystem", "tarpc-rpc"]

# Core features (TRUE PRIMAL architecture)
capability-ai = []                     # Capability-based AI (Pure Rust!)
ecosystem = []                         # Ecosystem integration (core!)
tarpc-rpc = ["tarpc", "tokio-serde", "bincode"]  # High-performance binary RPC (core!)

# Optional features
system-metrics = []  # Uses universal_constants::sys_info (pure Rust, /proc on Linux)
monitoring = ["prometheus", "metrics", "metrics-exporter-prometheus"]  # Metrics (optional)
benchmarking = ["criterion"]             # Benchmarking tools
enhanced_error_handling = []                     # Enhanced error handling
optimizations = []                               # Performance optimizations
## Enable deprecated vendor-specific AI adapters (Anthropic, OpenAI).
## These compile in direct HTTP adapters — v0.3.0 removal planned.
## Prefer capability-based discovery with UniversalAiAdapter + LOCAL_AI_ENDPOINT.
## See crates/main/src/api/ai/adapters/mod.rs for migration guidance.
deprecated-adapters = []
nvml = ["dep:nvml-wrapper"]                        # NVIDIA NVML GPU detection
gpu-detection = []                                # GPU detection via NVML/ROCm/nvidia-smi (ToadStool compute primal)

[dev-dependencies]
tokio-test = "0.4"
test-context = "0.1"
mockall = "0.11"
tempfile = "3.8"
temp-env = "0.3"  # Env var isolation for tests (avoids cross-test interference)
pretty_assertions = "1.4"
serial_test = "3.0"  # For serializing tests that modify global state (env vars)
proptest.workspace = true  # Property-based testing (groundSpring/wetSpring pattern)

[[bin]]
name = "squirrel"
path = "src/main.rs"

[[bench]]
name = "ecosystem_benchmarks"
harness = false
required-features = ["benchmarking"]

[lib]
name = "squirrel"
path = "src/lib.rs" 

[lints]
workspace = true
